--- a/index.html
+++ b/index.html
@@ -167,31 +167,31 @@
 						<div class="row">
 							<div class="col-md-4">
 								<h5 class="sm-text-center" v-bind:class="{'text-primary': current_step === 1}">
-									<span class="bold text-uppercase">step 1<br></span>
-									<span>Select chart type and configure options.</span>
+									<span class="bold text-uppercase">步驟一<br></span>
+									<span>選擇想要輸出的圖表類型並輸入圖表數據</span>
 								</h5>
 							</div>
 							<div class="col-md-4">
 								<h5 class="sm-text-center" v-bind:class="{'text-primary': current_step === 2}">
-									<span class="bold text-uppercase">step 2<br></span>
-									<span>Download the rendered HTML file.</span>
+									<span class="bold text-uppercase">步驟二<br></span>
+									<span>下載圖表 HTML 檔案與資料檔</span>
 								</h5>
 							</div>
 							<div class="col-md-4">
 								<h5 class="sm-text-center" v-bind:class="{'text-primary': current_step === 3}">
-									<span class="bold text-uppercase">step 3<br></span>
-									<span>Add file to repository and commit.</span>
+									<span class="bold text-uppercase">步驟三<br></span>
+									<span>將檔案上傳至 Github 後於部落格中以 iframe 嵌入</span>
 								</h5>
 							</div>
 						</div>
 						<div class="row m-t-20" v-if="(current_step === 1)">
 							<div class="col-md-12">
-								<h5 class="semi-bold">1. Enter you chart title.</h5>
+								<h5 class="semi-bold">1. 輸入表頭（將會以標題文字出現在圖表最上方）</h5>
 							</div>
 							<div class="col-md-12">
 								<form role="form" class="p-l-20">
 									<div class="form-group form-group-default required">
-								        <label>Chart Title</label>
+								        <label>圖表標題</label>
 								        <input type="text" class="form-control" v-model="title">
 								    </div>
 								</form>
@@ -199,7 +199,7 @@
 						</div>
 						<div class="row m-t-20" v-if="(current_step === 1)">
 							<div class="col-md-12">
-								<h5 class="semi-bold">2. Select your chart type.</h5>
+								<h5 class="semi-bold">2. 選擇圖表類型</h5>
 							</div>
 							<div class="col-md-12">
 								<div class="radio radio-info p-l-20">
@@ -217,36 +217,37 @@
 								</div>
 							</div>
 						</div>
-						<div class="row m-t-20" v-if="(chart_type === 'bar')">
+						<div class="row m-t-20" v-if="(current_step === 1 && chart_type === 'bar')">
 							<div class="col-md-12">
-								<h5 class="semi-bold">3. Data and Options for the X-Axis</h5>
+								<h5 class="semi-bold">3. X 座標軸資料與選項</h5>
 							</div>
 							<div class="col-md-12">
 								<form role="form" class="p-l-20">
 									<div class="form-group form-group-default required">
-								        <label class="text-capitalize">x axis label name</label>
+								        <label class="text-capitalize">X 座標軸下方資料標籤</label>
 								        <input type="text" class="form-control" name="XlabelName" v-model="chart.x_label" required>
 								    </div>
 								    <div class="form-group form-group-default required">
-								        <label class="text-capitalize">x axis label data</label>
+								        <label class="text-capitalize">X 座標軸資料</label>
 								        <textarea type="text" class="form-control custom-height" v-model="chart.x_data" required name="XlabelData"></textarea>
 								    </div>
 								</form>
+								<p class="fs-14 p-l-20">請於輸入 X 座標軸資料時以換行鍵（enter）間隔每個欄位的資料，並注意資料的最後不要有多餘的換行鍵。</p>
 							</div>
 						</div>
-						<div class="row m-t-20" v-if="(chart_type === 'bar')">
+						<div class="row m-t-20" v-if="(current_step === 1 && chart_type === 'bar')">
 							<div class="col-md-12">
-								<h5 class="semi-bold">4. Data and Options for the Y-Axis</h5>
+								<h5 class="semi-bold">4. Y 座標軸資料與選項</h5>
 							</div>
 							<div class="col-md-12">
 								<div class="p-l-20">
-									<h5 class="semi-bold">Y-Axis Left (Required)</h5>
+									<h5 class="semi-bold">左側 Y 座標軸（必填）</h5>
 								</div>
 							</div>
 							<div class="col-md-9">
 								<div class="p-l-20">
 									<div class="form-group form-group-default required">
-								        <label class="text-capitalize">y axis label name</label>
+								        <label class="text-capitalize">Y 座標軸側邊資料標籤</label>
 								        <input type="text" class="form-control" name="YlabelName1" v-model="chart.y_label_1" required>
 								    </div>
 								</div>
@@ -254,18 +255,18 @@
 							<div class="col-md-3">
 								<div class="checkbox check-info">
 								    <input type="checkbox" v-model="chart.y_label_1_percentage" id="percentage1">
-								    <label for="percentage1" class="text-capitalize">in percentage</label>
+								    <label for="percentage1" class="text-capitalize">以百分比方式顯示</label>
 								</div>
 							</div>
 							<div class="col-md-12">
 								<div class="p-l-20">
-									<h5 class="semi-bold">Y-Axis Right (Optional)</h5>
+									<h5 class="semi-bold">右側 Y 座標軸（非必填）</h5>
 								</div>
 							</div>
 							<div class="col-md-9">
 								<div class="p-l-20">
 									<div class="form-group form-group-default required">
-								        <label class="text-capitalize">y axis label name</label>
+								        <label class="text-capitalize">Y 座標軸側邊資料標籤</label>
 								        <input type="text" class="form-control" name="YlabelName2" v-model="chart.y_label_2" required>
 								    </div>
 								</div>
@@ -273,69 +274,70 @@
 							<div class="col-md-3">
 								<div class="checkbox check-info">
 								    <input type="checkbox" v-model="chart.y_label_2_percentage" id="percentage2">
-								    <label for="percentage2" class="text-capitalize">in percentage</label>
+								    <label for="percentage2" class="text-capitalize">以百分比資料顯示</label>
 								</div>
 							</div>
 							<div class="col-md-12">
 								<div class="p-l-20">
-									<h5 class="semi-bold">Y-Axis Datasets</h5>
+									<h5 class="semi-bold">Y 座標軸資料組</h5>
 								</div>
 							</div>
 							<div class="col-md-12 m-b-20">
 								<div class="p-l-20">
 									<button class="btn btn-primary btn-animated from-left fa fa-plus" type="button" v-on:click="add_dataset()">
-									    <span class="text-capitalize">add new dataset</span>
+									    <span class="text-capitalize">新增一組資料</span>
 									</button>
 								</div>
 							</div>
 							<div v-for="(data, index) in chart.y_dataset" class="col-md-12">
 								<div class="m-t-30 p-l-20">
-									<h5 class="bold">Dataset {{index + 1}}</h5>
+									<h5 class="bold">資料組 {{index + 1}}</h5>
 									<div class="row">
 										<div class="col-md-12">
 											<div class="form-group form-group-default required">
-										        <label class="text-capitalize">dataset label name</label>
+										        <label class="text-capitalize">資料組名稱（會出現在圖表上方標註資料來源）</label>
 										        <input type="text" class="form-control" name="YlabelName2" v-model="data.label" required>
 										    </div>
 										</div>
 										<div class="col-md-12">
 											<div class="form-group form-group-default required">
-										        <label class="text-capitalize">dataset data</label>
+										        <label class="text-capitalize">資料內容</label>
 										        <textarea type="text" class="form-control custom-height" v-model="data.data" required name="data"></textarea>
 										    </div>
+										    <p class="fs-14 p-l-20">請於輸入 Y 座標軸資料時以換行鍵（enter）間隔每個欄位的資料，並注意資料的最後不要有多餘的換行鍵。</p>
 										</div>
 										<div class="col-md-6">
-											<h6 class="text-uppercase bold">graph color</h6>
+											<h6 class="text-uppercase bold">圖表顏色</h6>
 											<select class="form-control" v-model="data.color">
-											    <option value="purple" class="text-capitalize">Purple</option>
-											    <option value="green" class="text-capitalize">Green</option>
-											    <option value="blue" class="text-capitalize">Blue</option>
-											    <option value="orange" class="text-capitalize">Orange</option>
-											    <option value="yellow" class="text-capitalize">Yellow</option>
+											    <option value="purple" class="text-capitalize">purple</option>
+											    <option value="green" class="text-capitalize">green</option>
+											    <option value="blue" class="text-capitalize">blue</option>
+											    <option value="orange" class="text-capitalize">orange</option>
+											    <option value="yellow" class="text-capitalize">yellow</option>
 											</select>
 										</div>
 										<div class="col-md-6">
-											<h6 class="text-uppercase bold">parent axis</h6>
+											<h6 class="text-uppercase bold">對齊座標軸：</h6>
 											<div class="radio radio-info m-t-20">
 												<input type="radio" value="1" id="left" v-model="data.axis">
-												<label for="left" class="text-capitalize semi-bold">follow left y axis</label>
+												<label for="left" class="text-capitalize semi-bold">對齊左側 Y 座標軸</label>
 												<input type="radio" value="2" id="right" v-model="data.axis">
-												<label for="right" class="text-capitalize semi-bold">follow right y axis</label>
+												<label for="right" class="text-capitalize semi-bold">對齊右側 Y 座標軸</label>
 											</div>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-						<div class="row" v-if="(chart_type === 'bar')">
+						<div class="row" v-if="(current_step === 1 && chart_type === 'bar')">
 							<div class="col-md-12">
 								<hr>
 								<div class="p-l-20">
 									<button class="btn btn-info btn-animated from-left fa fa-eye" type="button" v-on:click="preview_chart(); download_chart();">
-									    <span class="text-capitalize">preview chart</span>
+									    <span class="text-capitalize">預覽圖表</span>
 									</button>
 									<a class="btn btn-success btn-animated from-left fa fa-download m-l-20" id="download-chart" download="chart.html">
-									    <span class="text-capitalize">Download Chart</span>
+									    <span class="text-capitalize">下載圖表檔案</span>
 									</a>
 								</div>
 							</div>
@@ -343,15 +345,15 @@
 								<canvas id="chart"></canvas>
 							</div>
 						</div>
-						<div class="row m-t-20" v-if="(chart_type === 'table')">
+						<div class="row m-t-20" v-if="(current_step === 1 && chart_type === 'table')">
 							<div class="col-md-12">
-								<h5 class="semi-bold">3. Table Settings and Header Data</h5>
+								<h5 class="semi-bold">3. 表頭設定</h5>
 							</div>
 							<div class="col-md-12">
 								<div class="p-b-20 p-l-20">
 									<div class="row">
 										<div class="col-md-4">
-											<h6 class="text-uppercase bold">table header color</h6>
+											<h6 class="text-uppercase bold">表頭背景顏色</h6>
 											<select class="form-control" v-model="table.header_color">
 											    <option value="purple" class="text-capitalize">Purple</option>
 											    <option value="green" class="text-capitalize">Green</option>
@@ -364,7 +366,7 @@
 											<div class="p-t-30">
 												<div class="checkbox check-info">
 												    <input type="checkbox" v-model="table.left_number" id="leftNumber">
-												    <label for="leftNumber" class="text-capitalize">with left number</label>
+												    <label for="leftNumber" class="text-capitalize">於左側加上一列數字欄位</label>
 												</div>
 											</div>
 										</div>
@@ -374,42 +376,44 @@
 							<div class="col-md-12">
 								<form class="p-l-20" role="form">
 									 <div class="form-group form-group-default required">
-								        <label class="text-capitalize">table header</label>
+								        <label class="text-capitalize">表頭資料</label>
 								        <textarea type="text" class="form-control custom-height" required v-model="table.header_data"></textarea>
 								    </div>
 								</form>
+								<p class="fs-14 p-l-20">請於輸入表格資料時以換行鍵（enter）間隔每個欄位的資料，並注意資料的最後不要有多餘的換行鍵。</p>
 							</div>
 						</div>
-						<div class="row m-t-20" v-if="(chart_type === 'table')">
+						<div class="row m-t-20" v-if="(current_step === 1 && chart_type === 'table')">
 							<div class="col-md-12">
-								<h5 class="semi-bold">4. Table Data</h5>
+								<h5 class="semi-bold">4. 表格資料</h5>
 							</div>
 							<div class="col-md-12 m-b-20">
 								<div class="p-l-20">
 									<button class="btn btn-primary btn-animated from-left fa fa-plus" type="button" v-on:click="add_table_row()">
-									    <span class="text-capitalize">add new table row</span>
+									    <span class="text-capitalize">新增一列</span>
 									</button>
 								</div>
 							</div>
 							<div class="col-md-12">
 								<form class="p-l-20" role="form" v-for="(row, index) in table.body_data">
-									<h6 class="bold text-capitalize">table row {{index + 1}}</h6>
+									<h6 class="bold text-capitalize">表格列 {{index + 1}}</h6>
 									<div class="form-group form-group-default required">
-								        <label class="text-capitalize">table row data</label>
+								        <label class="text-capitalize">表格列資料</label>
 								        <textarea type="text" class="form-control custom-height" required v-model="row.raw"></textarea>
 								    </div>
 								</form>
+								<p class="fs-14 p-l-20">請於輸入表格列資料時以換行鍵（enter）間隔每個欄位的資料，並注意資料的最後不要有多餘的換行鍵。</p>
 							</div>
 						</div>
-						<div class="row m-t-20" v-if="(chart_type === 'table')">
+						<div class="row m-t-20" v-if="(current_step === 1 && chart_type === 'table')">
 							<div class="col-md-12">
 								<hr>
 								<div class="p-l-20">
 									<button class="btn btn-info btn-animated from-left fa fa-eye" type="button" v-on:click="preview_table();">
-									    <span class="text-capitalize">preview table</span>
+									    <span class="text-capitalize">預覽表格</span>
 									</button>
 									<a class="btn btn-success btn-animated from-left fa fa-download m-l-20" id="download-table" download="table.html">
-									    <span class="text-capitalize">download table</span>
+									    <span class="text-capitalize">下載表格</span>
 									</a>
 								</div>
 							</div>
@@ -430,31 +434,31 @@
 								</div>
 							</div>
 						</div>
-						<div class="row m-t-20" v-if="(chart_type === 'chord')">
+						<div class="row m-t-20" v-if="(current_step === 1 && chart_type === 'chord')">
 							<div class="col-md-12">
-								<h5 class="semi-bold">3. Upload CSV File</h5>
+								<h5 class="semi-bold">3. 上傳 Google Sheets CSV 檔案</h5>
 							</div>
 							<div class="col-md-12 m-l-20">
 								<input type="file" name="" @change="file_upload($event.target.files)" class="hidden-input" accept="text/csv" id="csv-upload">
 								<label for="csv-upload" class="bold text-uppercase"><i class="ion-upload m-r-5"></i>upload</label>
 							</div>
 							<div class="col-md-12 m-l-20">
-								<p v-show="chord.json_status === 1" class="bold">CSV File Uploaded!</p>
+								<p v-show="chord.json_status === 1" class="bold">CSV 檔案已經成功上傳！</p>
 							</div>
 							<div class="col-md-12" v-show="chord.json_status === 1">
-								<h5 class="semi-bold">4. Download chord data file</h5>
+								<h5 class="semi-bold">4. Chord 圖表設定與下載</h5>
 							</div>
 							<div class="col-md-12 m-l-20" v-show="chord.json_status === 1">
 								<div class="form-group form-group-default required">
-							        <label class="text-capitalize">chord data file name</label>
+							        <label class="text-capitalize">chord 資料檔檔名</label>
 							        <input type="text" class="form-control custom-height" required v-model="chord.json_filename">
 							    </div>
 							    <div class="form-group form-group-default required">
-							        <label class="text-capitalize">chord chart filename</label>
+							        <label class="text-capitalize">chord 圖表檔檔名</label>
 							        <input type="text" class="form-control custom-height" required v-model="chord.chord_filename">
 							    </div>
 							    <button class="btn btn-primary btn-animated from-left fa fa-check" type="button" v-on:click="create_chord()">
-								    <span class="text-capitalize">download chart and data file</span>
+								    <span class="text-capitalize">下載圖表檔與資料檔</span>
 								</button>
 								<a href="" id="hidden-json-download" v-show="false"></a>
 								<a href="" id="hidden-chord-download" v-show="false"></a>
@@ -471,41 +475,6 @@
 			<!-- END PAGE CONTENT WRAPPER -->
 		</div>
 		<!-- END PAGE CONTAINER -->
-		<!-- BEGIN TEMPLATES -->
-		<template id="download-modal">
-			<div class="modal fade slide-up disable-scroll" tabindex="-1" role="dialog" aria-labelledby="modalSlideUpLabel" aria-hidden="false">
-		    <div class="modal-dialog">
-		        <div class="modal-content-wrapper">
-			        <div class="modal-content">
-			            <div class="modal-header clearfix text-left">
-			                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-			                  <i class="pg-close fs-14"></i>
-			                </button>
-			                <h5 class="bold">Download Chart File</h5>
-			            </div>
-			            <div class="modal-body">
-			                <form role="form">
-							    <div class="form-group form-group-default required">
-							        <label>Chart Filename</label>
-							        <input type="text" class="form-control" required v-model="filename">
-							    </div>
-			                </form>
-			            </div>
-			            <div class="modal-footer">
-			            	<button class="btn btn-success btn-animated from-left fa fa-download" type="button" v-on:click="download_chart()">
-							    <span class="text-capitalize">Download File</span>
-							</button>
-			            </div>
-			        </div>
-		        </div>
-		        <!-- /.modal-content -->
-		    </div>
-		</div>
-		</template>
-		<!-- END TEMPLATES -->
-		<!-- BEGIN MODALS -->
-		<download-modal v-if="(show_download_modal === true)" v-on:close="(show_download_modal = false)"></download-modal>
-		<!-- END MODALS -->
 		<!-- BEGIN VENDOR JS -->
 		<script src="assets/plugins/pace/pace.min.js" type="text/javascript"></script>
 		<script src="assets/plugins/jquery/jquery-1.11.1.min.js" type="text/javascript"></script>
