--- a/index.html
+++ b/index.html
@@ -254,15 +254,18 @@
 							<div class="col-md-9">
 								<div class="p-l-20">
 									<div class="form-group form-group-default required">
-								        <label class="text-capitalize">Y 座標軸側邊資料標籤</label>
-								        <input type="text" class="form-control" name="YlabelName1" v-model="chart.y_label_1" required>
-								    </div>
+						        <label class="text-capitalize">Y 座標軸側邊資料標籤</label>
+						        <input type="text" class="form-control" name="YlabelName1" v-model="chart.y_label_1" required>
+							    </div>
 								</div>
 							</div>
 							<div class="col-md-3">
 								<div class="checkbox check-info">
 								    <input type="checkbox" v-model="chart.y_label_1_percentage" id="percentage1">
 								    <label for="percentage1" class="text-capitalize">以百分比方式顯示</label>
+								    <br>
+								    <input type="checkbox" v-model="chart.y_label_1_begin_at_zero" id="beginatzero1">
+								    <label for="beginatzero1" class="text-capitalize">從零開始</label>
 								</div>
 							</div>
 							<div class="col-md-12">
@@ -273,17 +276,21 @@
 							<div class="col-md-9">
 								<div class="p-l-20">
 									<div class="form-group form-group-default required">
-								        <label class="text-capitalize">Y 座標軸側邊資料標籤</label>
-								        <input type="text" class="form-control" name="YlabelName2" v-model="chart.y_label_2" required>
-								    </div>
+						        <label class="text-capitalize">Y 座標軸側邊資料標籤</label>
+						        <input type="text" class="form-control" name="YlabelName2" v-model="chart.y_label_2" required>
+							    </div>
 								</div>
 							</div>
 							<div class="col-md-3">
 								<div class="checkbox check-info">
 								    <input type="checkbox" v-model="chart.y_label_2_percentage" id="percentage2">
 								    <label for="percentage2" class="text-capitalize">以百分比資料顯示</label>
+								    <br>
+								    <input type="checkbox" v-model="chart.y_label_2_begin_at_zero" id="beginatzero2">
+								    <label for="beginatzero2" class="text-capitalize">從零開始</label>
 								</div>
 							</div>
+
 							<div class="col-md-12">
 								<div class="p-l-20">
 									<h5 class="semi-bold">Y 座標軸資料組</h5>
@@ -315,7 +322,7 @@
 										</div>
 										<div class="col-md-6">
 											<h6 class="text-uppercase bold">圖表顏色</h6>
-											<select class="form-control" v-model="data.color">
+											<select class="form-control" v-model="data.color" v-bind:style="selectedBgColor(data.color)">
 											    <option value="light_green" class="text-capitalize">light green</option>
 											    <option value="green" class="text-capitalize">green</option>
 											    <option value="light_blue" class="text-capitalize">light blue</option>
